# ShowMeBackend

./: .gitignore  Cargo.toml  tauri.conf.json
src/: cer.rs  game.rs  lcu.rs  main.rs  sgp.rs  summoner.rs  websocket.rs
src/cer/: data.rs
src/lcu/: match_history.rs  parameter.rs  ranked_stats.rs  request.rs  summoner.rs
src/sgp/: match_history.rs  request.rs  summoner.rs
